fixed dark mode not working and modified mui themes to follow app palette, will have to implement :hover colors for each component individually as I use them tho

--- a/src/material-theme/dark-hc.css
+++ b/src/material-theme/dark-hc.css
@@ -1,51 +1,51 @@
 .dark-high-contrast {
-  --md-sys-color-primary: rgb(249 251 255);
-  --md-sys-color-surface-tint: rgb(141 205 255);
+  --md-sys-color-primary: rgb(251 250 255);
+  --md-sys-color-surface-tint: rgb(173 198 255);
   --md-sys-color-on-primary: rgb(0 0 0);
-  --md-sys-color-primary-container: rgb(151 209 255);
+  --md-sys-color-primary-container: rgb(180 203 255);
   --md-sys-color-on-primary-container: rgb(0 0 0);
-  --md-sys-color-secondary: rgb(255 249 248);
+  --md-sys-color-secondary: rgb(255 250 248);
   --md-sys-color-on-secondary: rgb(0 0 0);
-  --md-sys-color-secondary-container: rgb(255 187 165);
+  --md-sys-color-secondary-container: rgb(255 189 133);
   --md-sys-color-on-secondary-container: rgb(0 0 0);
-  --md-sys-color-tertiary: rgb(251 250 255);
+  --md-sys-color-tertiary: rgb(240 255 237);
   --md-sys-color-on-tertiary: rgb(0 0 0);
-  --md-sys-color-tertiary-container: rgb(180 203 255);
+  --md-sys-color-tertiary-container: rgb(158 217 166);
   --md-sys-color-on-tertiary-container: rgb(0 0 0);
   --md-sys-color-error: rgb(255 249 249);
   --md-sys-color-on-error: rgb(0 0 0);
-  --md-sys-color-error-container: rgb(255 185 182);
+  --md-sys-color-error-container: rgb(255 186 177);
   --md-sys-color-on-error-container: rgb(0 0 0);
-  --md-sys-color-background: rgb(15 20 24);
-  --md-sys-color-on-background: rgb(222 227 233);
-  --md-sys-color-surface: rgb(15 20 24);
+  --md-sys-color-background: rgb(17 19 24);
+  --md-sys-color-on-background: rgb(226 226 233);
+  --md-sys-color-surface: rgb(17 19 24);
   --md-sys-color-on-surface: rgb(255 255 255);
-  --md-sys-color-surface-variant: rgb(62 72 81);
-  --md-sys-color-on-surface-variant: rgb(249 251 255);
-  --md-sys-color-outline: rgb(194 204 215);
-  --md-sys-color-outline-variant: rgb(194 204 215);
+  --md-sys-color-surface-variant: rgb(68 71 79);
+  --md-sys-color-on-surface-variant: rgb(251 250 255);
+  --md-sys-color-outline: rgb(201 202 212);
+  --md-sys-color-outline-variant: rgb(201 202 212);
   --md-sys-color-shadow: rgb(0 0 0);
   --md-sys-color-scrim: rgb(0 0 0);
-  --md-sys-color-inverse-surface: rgb(222 227 233);
+  --md-sys-color-inverse-surface: rgb(226 226 233);
   --md-sys-color-inverse-on-surface: rgb(0 0 0);
-  --md-sys-color-inverse-primary: rgb(0 45 69);
-  --md-sys-color-primary-fixed: rgb(211 234 255);
+  --md-sys-color-inverse-primary: rgb(7 40 89);
+  --md-sys-color-primary-fixed: rgb(222 230 255);
   --md-sys-color-on-primary-fixed: rgb(0 0 0);
-  --md-sys-color-primary-fixed-dim: rgb(151 209 255);
-  --md-sys-color-on-primary-fixed-variant: rgb(0 24 40);
-  --md-sys-color-secondary-fixed: rgb(255 224 215);
+  --md-sys-color-primary-fixed-dim: rgb(180 203 255);
+  --md-sys-color-on-primary-fixed-variant: rgb(0 21 55);
+  --md-sys-color-secondary-fixed: rgb(255 225 203);
   --md-sys-color-on-secondary-fixed: rgb(0 0 0);
-  --md-sys-color-secondary-fixed-dim: rgb(255 187 165);
-  --md-sys-color-on-secondary-fixed-variant: rgb(48 8 0);
-  --md-sys-color-tertiary-fixed: rgb(222 230 255);
+  --md-sys-color-secondary-fixed-dim: rgb(255 189 133);
+  --md-sys-color-on-secondary-fixed-variant: rgb(38 17 0);
+  --md-sys-color-tertiary-fixed: rgb(185 245 193);
   --md-sys-color-on-tertiary-fixed: rgb(0 0 0);
-  --md-sys-color-tertiary-fixed-dim: rgb(180 203 255);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(0 21 55);
-  --md-sys-color-surface-dim: rgb(15 20 24);
-  --md-sys-color-surface-bright: rgb(53 58 63);
-  --md-sys-color-surface-container-lowest: rgb(10 15 19);
-  --md-sys-color-surface-container-low: rgb(23 28 33);
-  --md-sys-color-surface-container: rgb(27 32 37);
-  --md-sys-color-surface-container-high: rgb(37 43 47);
-  --md-sys-color-surface-container-highest: rgb(48 53 58);
+  --md-sys-color-tertiary-fixed-dim: rgb(158 217 166);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(0 27 8);
+  --md-sys-color-surface-dim: rgb(17 19 24);
+  --md-sys-color-surface-bright: rgb(55 57 62);
+  --md-sys-color-surface-container-lowest: rgb(12 14 19);
+  --md-sys-color-surface-container-low: rgb(26 27 32);
+  --md-sys-color-surface-container: rgb(30 31 37);
+  --md-sys-color-surface-container-high: rgb(40 42 47);
+  --md-sys-color-surface-container-highest: rgb(51 53 58);
 }
